// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderHtmlBody > snapshot — hotel + add-ons 1`] = `
"<!DOCTYPE html>
<html><head><meta charset="utf-8"></head>
<body style="margin:0;padding:0;background:#f0fbff;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,sans-serif;color:#164e63;">
<div style="display:none;font-size:1px;color:transparent;line-height:0;max-height:0;max-width:0;opacity:0;overflow:hidden">Booking WT-KA-20260501-XYZA · Friday, 1 May 2026 → Wednesday, 6 May 2026 · ION Karpathos</div>
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background:#f0fbff;padding:32px 16px;">
  <tr><td align="center">
    <table role="presentation" width="560" cellpadding="0" cellspacing="0" style="max-width:560px;background:#ffffff;border:1px solid #a5f3fc;border-radius:16px;padding:32px;">
      <tr><td>
        <p style="margin:0 0 8px;color:#ef5a3e;font-size:11px;letter-spacing:0.22em;text-transform:uppercase;font-weight:600;">Booking received</p>
        <h1 style="margin:0 0 24px;color:#164e63;font-size:28px;line-height:1.2;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,sans-serif;">We've got it.</h1>
        <p style="margin:0 0 20px;color:#164e63;font-size:15px;line-height:1.6;">Hi Andy,</p>
        <p style="margin:0 0 20px;color:#164e63;font-size:15px;line-height:1.6;">We've received your booking for <strong>Wing week — 5 days</strong> at <strong translate="no">ION Karpathos</strong>.</p>
        <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin:24px 0;border-top:1px solid #a5f3fc;border-bottom:1px solid #a5f3fc;padding:16px 0;">
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Booking ref</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">WT-KA-20260501-XYZA</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Destination</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">ION Karpathos, South Aegean, Greece</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Programme</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">Wing week — 5 days (5 days · coaching + rental)</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Arrival</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">Friday, 1 May 2026</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Departure</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">Wednesday, 6 May 2026  (5 nights)</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Price</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">€780</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Gear</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">Windsurf kit — €65/day × 5 = €325</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Hotel</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">Karpathos Beach Hotel — €95/night × 5 = €475</td></tr>
          <tr><td style="padding:6px 16px 6px 0;color:#0e7490;font-size:12px;text-transform:uppercase;letter-spacing:0.12em;white-space:nowrap;vertical-align:top;">Total</td><td style="padding:6px 0;color:#164e63;font-size:15px;vertical-align:top;">€1,580</td></tr>
        </table>
        <p style="margin:0 0 16px;color:#164e63;font-size:15px;line-height:1.6;">Real online payment is coming soon. For now we'll reply within the day to confirm availability and take payment by card.</p>
        <p style="margin:0 0 16px;color:#0e7490;font-size:13px;line-height:1.6;">The attached calendar invite blocks out the week on your calendar.</p>
        <p style="margin:24px 0 0;color:#164e63;font-size:15px;line-height:1.6;">Thanks for riding with us.<br/>WindTribe</p>
      </td></tr>
    </table>
  </td></tr>
</table>
</body></html>"
`;

exports[`renderTextBody > snapshot — add-ons only 1`] = `
"Hi Andy,

We've received your booking for Wing week — 5 days at ION Karpathos.

Booking ref: WT-KA-20260501-XYZA
Destination: ION Karpathos, South Aegean, Greece
Programme:   Wing week — 5 days (5 days · coaching + rental)
Arrival:     Friday, 1 May 2026
Departure:   Wednesday, 6 May 2026  (5 nights)
Price:       €780
Gear:        Windsurf kit — €65/day x 5 = €325
Total:       €1,105

Real online payment is coming soon. For now we'll reply within the day to
confirm availability and take payment by card.

The attached calendar invite blocks out the week on your calendar.

Thanks for riding with us.
WindTribe"
`;

exports[`renderTextBody > snapshot — hotel + add-ons 1`] = `
"Hi Andy,

We've received your booking for Wing week — 5 days at ION Karpathos.

Booking ref: WT-KA-20260501-XYZA
Destination: ION Karpathos, South Aegean, Greece
Programme:   Wing week — 5 days (5 days · coaching + rental)
Arrival:     Friday, 1 May 2026
Departure:   Wednesday, 6 May 2026  (5 nights)
Price:       €780
Gear:        Windsurf kit — €65/day x 5 = €325
Hotel:       Karpathos Beach Hotel — €95/night x 5 = €475
Total:       €1,580

Real online payment is coming soon. For now we'll reply within the day to
confirm availability and take payment by card.

The attached calendar invite blocks out the week on your calendar.

Thanks for riding with us.
WindTribe"
`;

exports[`renderTextBody > snapshot — hotel only 1`] = `
"Hi Andy,

We've received your booking for Wing week — 5 days at ION Karpathos.

Booking ref: WT-KA-20260501-XYZA
Destination: ION Karpathos, South Aegean, Greece
Programme:   Wing week — 5 days (5 days · coaching + rental)
Arrival:     Friday, 1 May 2026
Departure:   Wednesday, 6 May 2026  (5 nights)
Price:       €780
Hotel:       Karpathos Beach Hotel — €95/night x 5 = €475
Total:       €1,255

Real online payment is coming soon. For now we'll reply within the day to
confirm availability and take payment by card.

The attached calendar invite blocks out the week on your calendar.

Thanks for riding with us.
WindTribe"
`;

exports[`renderTextBody > snapshot — no extras 1`] = `
"Hi Andy,

We've received your booking for Wing week — 5 days at ION Karpathos.

Booking ref: WT-KA-20260501-XYZA
Destination: ION Karpathos, South Aegean, Greece
Programme:   Wing week — 5 days (5 days · coaching + rental)
Arrival:     Friday, 1 May 2026
Departure:   Wednesday, 6 May 2026  (5 nights)
Price:       €780

Real online payment is coming soon. For now we'll reply within the day to
confirm availability and take payment by card.

The attached calendar invite blocks out the week on your calendar.

Thanks for riding with us.
WindTribe"
`;
